gccida/g3/ix86_prepare_fp_compare_args
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7683:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  ix86_prepare_fp_compare_args( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7683:41: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  ix86_prepare_fp_compare_args( rtx_code code, rtx *pop0, rtx *pop1) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7687:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7690:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7692:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7695:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v16; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7732:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v15) & 0xFFFFFFFB) != 2 && *( ( _DWORD *)&mode_class_0 + v15) != 8 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7732:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v15) & 0xFFFFFFFB) != 2 && *( ( _DWORD *)&mode_class_0 + v15) != 8 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7732:69: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v15) & 0xFFFFFFFB) != 2 && *( ( _DWORD *)&mode_class_0 + v15) != 8 
                                                                    ^~~~~~~~~~~~
                                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7752:14: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( *( &mode_class_0 + v22) & 0xFFFFFFFB) == 2 || *( ( _DWORD *)&mode_class_0 + v22) == 8) 
             ^~~~~~~~~~~~
             mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7752:34: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( ( *( &mode_class_0 + v22) & 0xFFFFFFFB) == 2 || *( ( _DWORD *)&mode_class_0 + v22) == 8) 
         ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7752:71: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( *( &mode_class_0 + v22) & 0xFFFFFFFB) == 2 || *( ( _DWORD *)&mode_class_0 + v22) == 8) 
                                                                      ^~~~~~~~~~~~
                                                                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7777:52: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( ( v20 = *( ( unsigned __int8 *)v7 + 2), ( *( &mode_class_0 + v20) & 0xFFFFFFFB) == 2) 
                                                   ^~~~~~~~~~~~
                                                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7777:72: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
&& ( ( v20 = *( ( unsigned __int8 *)v7 + 2), ( *( &mode_class_0 + v20) & 0xFFFFFFFB) == 2) 
                                               ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/i386.c:7778:19: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| *( ( _DWORD *)&mode_class_0 + v20) == 8) 
                  ^~~~~~~~~~~~
                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_prepare_fp_compare_args/src/obj/i386.o] Error 1
